# beams

./: .gitignore  CHANGES.md  DESIGN.md  README.md  pyproject.toml
.github/workflows/: publish.yml  testing.yaml
doc/: plot_base_beam.py
examples/: demo.py  sample_beam.json
tart_beam/: __init__.py  beam.py  combine.py  defaults.py  loaders.py  spherical.py  viz.py
tart_beam/tests/: __init__.py  test_beam.py  test_combine.py  test_healpix.py  test_loaders.py  test_spherical.py
